fix dark mode toggle flash on load by adding script in the body to prevent the load unless the right theme

--- a/app/scss/global/boilerplate.scss
+++ b/app/scss/global/boilerplate.scss
@@ -7,7 +7,6 @@ html {
   box-sizing: inherit;
   -webkit-user-select: none;
   user-select: none;
-  transition: all 200ms ease-in-out !important;
 }
 
 body{
